# WOPR

./: .claude-resume.md  .gitignore  README.md  generate_sounds.py  install.py  prototype_map.py  pyproject.toml
tests/: __init__.py  test_app.py  test_core.py
tests/test_games/: __init__.py  test_blackjack.py  test_chess.py  test_gtw.py  test_maze.py  test_tictactoe.py
tests/test_narrative/: __init__.py  test_dialogue.py  test_login.py
tests/test_ui/: __init__.py
wopr/: __init__.py  __main__.py  app.py  config.py
wopr/assets/data/: dialogue.json
wopr/assets/maps/: world_ascii.txt
wopr/core/: __init__.py  audio.py  state.py  voice.py
wopr/games/: __init__.py  base.py  maze.py
wopr/games/board/: __init__.py  checkers.py  chess.py  tictactoe.py
wopr/games/cards/: __init__.py  blackjack.py  bridge.py  gin_rummy.py  hearts.py  poker.py
wopr/games/military/: __init__.py  simulations.py
wopr/games/military/thermonuclear_war/: __init__.py  drawille_map.py  game.py  map.py  simulation.py  targets.py
wopr/narrative/: __init__.py  dialogue.py  dialup.py  login.py  sequences.py
wopr/ui/: __init__.py  animations.py  screens.py  terminal.py  widgets.py
